# app/Models/Rating.php
@@ -1,0 +1,35 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+/**
+ * @OA\Schema(
+ *     schema="Rating",
+ *     type="object",
+ *     required={"user_id", "trip_id", "rating"},
+ *     @OA\Property(property="id", type="integer", example=1),
+ *     @OA\Property(property="user_id", type="integer", example=1),
+ *     @OA\Property(property="trip_id", type="integer", example=1),
+ *     @OA\Property(property="rating", type="integer", example=5, description="Note entre 1 et 5"),
+ *     @OA\Property(property="created_at", type="string", format="date-time"),
+ *     @OA\Property(property="updated_at", type="string", format="date-time")
+ * )
+ */
+
+class Rating extends Model
+{
+    protected $fillable = ['user_id', 'trip_id', 'rating'];
+
+    public function user()
+    {
+        return $this->belongsTo(User::class);
+    }
+
+    public function trip()
+    {
+        return $this->belongsTo(Trip::class);
+    }
+}
